force-app/main/default/objects/GetFeedback_Aut__Survey__c/fields/CSATRecords__c.field-meta.xml
<CustomField>
    <fullName>CSATRecords__c</fullName>
    <label>CSAT Records</label>
    <summaryFilterItems>
        <field>GetFeedback_Aut__Response__c.CSAT__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>GetFeedback_Aut__Response__c.GetFeedback_Aut__Survey__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>