force-app/main/default/objects/GetFeedback_Aut__Survey__c/fields/CSATSum__c.field-meta.xml
<CustomField>
    <fullName>CSATSum__c</fullName>
    <label>CSAT Sum</label>
    <summarizedField>GetFeedback_Aut__Response__c.CSAT__c</summarizedField>
    <summaryFilterItems>
        <field>GetFeedback_Aut__Response__c.CSAT__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>GetFeedback_Aut__Response__c.GetFeedback_Aut__Survey__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>