force-app/main/default/objects/GetFeedback_Aut__Survey__c/fields/Detractors__c.field-meta.xml
<CustomField>
    <fullName>Detractors__c</fullName>
    <label>Detractors</label>
    <summarizedField>GetFeedback_Aut__Response__c.Detractors__c</summarizedField>
    <summaryForeignKey>GetFeedback_Aut__Response__c.GetFeedback_Aut__Survey__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>