force-app/main/default/objects/GetFeedback_Aut__Survey__c/fields/Neutral__c.field-meta.xml
<CustomField>
    <fullName>Neutral__c</fullName>
    <label>Neutral</label>
    <summarizedField>GetFeedback_Aut__Response__c.Neutral__c</summarizedField>
    <summaryForeignKey>GetFeedback_Aut__Response__c.GetFeedback_Aut__Survey__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>