force-app/main/default/objects/GetFeedback_Aut__Survey__c/fields/Promoters__c.field-meta.xml
<CustomField>
    <fullName>Promoters__c</fullName>
    <label>Promoters</label>
    <summarizedField>GetFeedback_Aut__Response__c.Promoters__c</summarizedField>
    <summaryForeignKey>GetFeedback_Aut__Response__c.GetFeedback_Aut__Survey__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>