force-app/main/default/objects/GetFeedback_Aut__Survey__c/listViews/GetFeedback_Aut__All.listView-meta.xml
<ListView>
    <fullName>GetFeedback_Aut__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>